# daisy-player

./: .gitignore  COMPILE  COPYING  ChangeLog  Changelog  Makefile  Makefile.am  Makefile.in  README.adoc  Readme  TODO  aclocal.m4  audiocd.c  autogen  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  daisy-player.1  daisy-player.af.po  daisy-player.c  daisy-player.de.po  daisy-player.desktop  daisy-player.es.po  daisy-player.fr.po  daisy-player.h  daisy-player.html  daisy-player.nl.po  daisy-player.pot  daisy-player.txt  daisy.h  daisy.h.in  daisy3.c  install.sh  libtool  process_manpage.sh  stamp-h1
.github/workflows/: ci.yml
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
doc/: COMPILE  COPYING  Changelog  Makefile  Makefile.am  Makefile.in  Readme  TODO  daisy-player.description  daisy-player.desktop  daisy-player.html  daisy-player.menu  daisy-player.pot  daisy-player.txt  install.sh
m4/: Makefile  Makefile.in  cernlib.m4  wayland-scanner.m4
man/: Makefile  Makefile.am  Makefile.in  daisy-player.1
po/: ChangeLog  LINGUAS  Makefile  Makefile.am  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  af.gmo  af.mo  af.po  af.po~  cs.gmo  cs.po  daisy-player.es.po  daisy-player.fr.po  daisy-player.hu.po  daisy-player.nb.po  daisy-player.pot  de.gmo  de.mo  de.po  de.po~  en@boldquot.gmo  en@boldquot.po  en@boldquot.po~  en@quot.gmo  en@quot.po  en@quot.po~  es.gmo  es.mo  es.po  es.po~  es_ES.gmo  es_ES.po  es_ES.utf8.gmo  es_ES.utf8.po  es_GT.gmo  es_GT.po  (+43 more)
src/: Makefile  Makefile.am  Makefile.in  alsa_ctl.c  audiocd.c  common.c  daisy-player.c  daisy.h  daisy2.02.c  daisy3.c  ncx.c  opf.c  paranoia.c  playfile.c
src/.deps/: audiocd.Po  daisy-player.Po  daisy3.Po  paranoia.Po
src/madplay/: Makefile.am  Makefile.in  audio.c  audio.h  audio_cdda.c  audio_wave.c  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  crc.c  filter.c  madplay.c  madtest.c  player.c  player.h  tag.c  version.c  version.h
src/madplay/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
src/madplay/m4/: Makefile  Makefile.am  Makefile.in
src/pactl/: Makefile.am  Makefile.in
src/pactl/m4/: Makefile  Makefile.in
src/pactl/src/: Makefile.am  Makefile.in  core-util.c  pactl-set-cmd.c  pactl.c
src/pulseaudio/: Makefile.in
src/pulseaudio/m4/: Makefile
src/pulseaudio/src/: Makefile.am  core-util.c  pactl-set-volume.c  pactl.c
tests/: Makefile.am  Pierre_Rabhi_Vers_la_sobriete_heureuse.expected  README  S07241.expected  Six_points_de_lumiere.expected  Y9621.expected  run1.sh
tests/Pierre_Rabhi_Vers_la_sobriete_heureuse/: speechgen.ncx  speechgen.opf  speechgen0001.smil  speechgen0002.smil  speechgen0003.smil  speechgen0004.smil  speechgen0005.smil  speechgen0006.smil  speechgen0007.smil  speechgen0008.smil  speechgen0009.smil  speechgen0010.smil  speechgen0011.smil  speechgen0012.smil  speechgen0013.smil  speechgen0014.smil  speechgen0015.smil  speechgen0016.smil  speechgen0017.smil  speechgen0018.smil  speechgen0019.smil  speechgen0020.smil  speechgen0021.smil  speechgen0022.smil  speechgen0023.smil  speechgen0024.smil  speechgen0025.smil  speechgen0026.smil  speechgen0027.smil  speechgen0028.smil  speechgen0029.smil  speechgen0030.smil  speechgen0031.smil  speechgen0032.smil  speechgen0033.smil  speechgen0034.smil  speechgen0035.smil  speechgen0036.smil  speechgen0037.smil  speechgen0038.smil  (+24 more)
tests/S07241/: 001_Le_Petit_Prince.smil  002_Quatrieme_de_couverture.smil  003_Dedicace.smil  004_Exergue.smil  005_Chapitre_1.smil  006_Chapitre_2.smil  007_Chapitre_3.smil  008_Chapitre_4.smil  009_Chapitre_5.smil  010_Chapitre_6.smil  011_Chapitre_7.smil  012_Chapitre_8.smil  013_Chapitre_9.smil  014_Chapitre_10.smil  015_Chapitre_11.smil  016_Chapitre_12.smil  017_Chapitre_13.smil  018_Chapitre_14.smil  019_Chapitre_15.smil  020_Chapitre_16.smil  021_Chapitre_17.smil  022_Chapitre_18.smil  023_Chapitre_19.smil  024_Chapitre_20.smil  025_Chapitre_21.smil  026_Chapitre_22.smil  027_Chapitre_23.smil  028_Chapitre_24.smil  029_Chapitre_25.smil  030_Chapitre_26.smil  031_Chapitre_27.smil  032_Conclusion.smil  033-000_Antoine_de_Saint-Exupery_lauteur.smil  033-001_Fondation_Antoine_de_Saint-Exupery.smil  033-002-001_Un_petit_prince_en_son_royaume.smil  033-002-002_La_passion_des_avions.smil  033-002-003_Pilote_et_ecrivain.smil  033-002-004_Un_petit_prince_en_Amerique.smil  033-002_A_la_rencontre_dAntoine_de_Saint-Exupery_1900.smil  033_Annexes.smil  (+5 more)
tests/Six_points_de_lumiere/: er_book_info.xml  master.smil  ncc.html  rjyt0002.smil  rjyt0003.smil  rjyt0004.smil  rjyt0005.smil  rjyt0006.smil  rjyt0007.smil  rjyt0008.smil  rjyt0009.smil  rjyt000a.smil  rjyt000b.smil  rjyt000c.smil  rjyt000d.smil  rjyt000e.smil  rjyt000f.smil  rjyt0010.smil  rjyt0011.smil  rjyt0012.smil  rjyt0013.smil  rjyt0014.smil  rjyt0015.smil  rjyt0016.smil  rjyt0017.smil
tests/Y9621/: 1441a400_petit_prince.html  er_book_info.xml  master.smil  ncc.html  wkds0001.smil  wkds0002.smil  wkds0003.smil  wkds0004.smil  wkds0005.smil  wkds0006.smil  wkds0007.smil  wkds0008.smil  wkds0009.smil  wkds000a.smil  wkds0010.smil  wkds0011.smil  wkds0012.smil  wkds0013.smil  wkds0014.smil  wkds0015.smil  wkds0016.smil  wkds0017.smil  wkds0018.smil  wkds0019.smil  wkds0020.smil  wkds0021.smil  wkds0022.smil  wkds0023.smil  wkds0024.smil  wkds0025.smil  wkds0026.smil  wkds0027.smil  wkds0028.smil  wkds0029.smil  wkds0030.smil  wkds0031.smil  wkds0032.smil
