AUTOMAKE_OPTIONS = foreign

SUBDIRS = man doc po src

docdir = $(datadir)/doc/@PACKAGE@

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = ABOUT-NLS aclocal.m4 am ar-lib ChangeLog compile \
             config.guess config.sub \
             config.h.in configure configure.ac COPYING \
             doc/ABOUT-NLS doc/Changelog doc/COMPILE doc/COPYING \
             doc/daisy-player.description doc/daisy-player.desktop \
             doc/daisy-player.html doc/daisy-player.menu \
             doc/daisy-player.png doc/daisy-player.txt doc/License \
             doc/Makefile.am doc/Makefile.in doc/TODO \
             icons INSTALL install-sh m4 \
             Makefile.am Makefile.in man missing mkinstalldirs \
             po/af.gmo \
             po/af.po \
             po/boldquot.sed \
             po/ChangeLog \
             po/cs.gmo \
             po/cs.po \
             po/daisy-player.pot \
             po/de.gmo \
             po/de.po \
             po/en@boldquot.gmo \
             po/en@boldquot.header \
             po/en@boldquot.po \
             po/en@quot.gmo \
             po/en@quot.header \
             po/en@quot.po \
             po/es_ES.gmo \
             po/es_ES.po \
             po/es_GT.gmo \
             po/es_GT.org \
             po/es_GT.po \
             po/es_GT.txt \
             po/fi.gmo \
             po/fi.po \
             po/fr.gmo \
             po/fr.po \
             po/fr.po.chexkei \
             po/fr.po.Osvaldo \
             po/hu.gmo \
             po/hu.Hammer_Attila.po \
             po/hu.JimmiXzSq.po \
             po/hu.po \
             po/insert-header.sin \
             po/it.gmo \
             po/it.po \
             po/LINGUAS \
             po/Makefile \
             po/Makefile.in \
             po/Makefile.in.in \
             po/Makevars \
             po/Makevars.template \
             po/messages.po \
             po/ml.gmo \
             po/ml.org \
             po/ml.po \
             po/nb.gmo \
             po/nb.po \
             po/nl.gmo \
             po/nl.po \
             po/pl.gmo \
             po/pl.Patryk_Doering \
             po/pl.po \
             po/POTFILES \
             po/POTFILES.in \
             po/pt.gmo \
             po/pt.po \
             po/quot.sed \
             po/remove-potcdate.sin \
             po/Rules-quot \
             po/sl.gmo \
             po/sl.po \
             po/sv.gmo \
             po/sv.po \
             src/daisy.h src/gettext.h \
             src/Makefile.am src/Makefile.in \
             src/madplay/ABOUT-NLS \
             src/madplay/aclocal.m4 \
             src/madplay/am \
             src/madplay/ar-lib \
             src/madplay/audio.h \
             src/madplay/CHANGES \
             src/madplay/compile \
             src/madplay/config.guess \
             src/madplay/config.h.in \
             src/madplay/config.sub \
             src/madplay/configure \
             src/madplay/configure.ac \
             src/madplay/COPYING \
             src/madplay/COPYRIGHT \
             src/madplay/crc.h \
             src/madplay/CREDITS \
             src/madplay/depcomp \
             src/madplay/filter.h \
             src/madplay/gettext.h \
             src/madplay/global.h \
             src/madplay/INSTALL \
             src/madplay/install-sh \
             src/madplay/m4 \
             src/madplay/m4/ChangeLog \
             src/madplay/m4/codeset.m4 \
             src/madplay/m4/gettext.m4 \
             src/madplay/m4/glibc21.m4 \
             src/madplay/m4/iconv.m4 \
             src/madplay/m4/intdiv0.m4 \
             src/madplay/m4/intmax.m4 \
             src/madplay/m4/inttypes_h.m4 \
             src/madplay/m4/inttypes.m4 \
             src/madplay/m4/inttypes-pri.m4 \
             src/madplay/m4/isc-posix.m4 \
             src/madplay/m4/lcmessage.m4 \
             src/madplay/m4/lib-ld.m4 \
             src/madplay/m4/lib-link.m4 \
             src/madplay/m4/lib-prefix.m4 \
             src/madplay/m4/longdouble.m4 \
             src/madplay/m4/longlong.m4 \
             src/madplay/m4/Makefile.am \
             src/madplay/m4/Makefile.in \
             src/madplay/m4/nls.m4 \
             src/madplay/m4/po.m4 \
             src/madplay/m4/printf-posix.m4 \
             src/madplay/m4/progtest.m4 \
             src/madplay/m4/signed.m4 \
             src/madplay/m4/size_max.m4 \
             src/madplay/m4/stdint_h.m4 \
             src/madplay/m4/uintmax_t.m4 \
             src/madplay/m4/ulonglong.m4 \
             src/madplay/m4/wchar_t.m4 \
             src/madplay/m4/wint_t.m4 \
             src/madplay/m4/xsize.m4 \
             src/madplay/madtest.c \
             src/madplay/Makefile.am \
             src/madplay/Makefile.in \
             src/madplay/mdate-sh \
             src/madplay/missing \
             src/madplay/mkinstalldirs \
             src/madplay/player.h \
             src/madplay/py-compile \
             src/madplay/README \
             src/madplay/resample.h \
             src/madplay/rgain.h \
             src/madplay/tag.h \
             src/madplay/tap-driver.sh \
             src/madplay/test-driver \
             src/madplay/TODO \
             src/madplay/VERSION \
             src/madplay/version.h \
             src/pactl/aclocal.m4 src/pactl/AGPL \
             src/pactl/compile src/pactl/config.guess \
             src/pactl/config.sub \
             src/pactl/config.h.in src/pactl/configure \
             src/pactl/configure.ac src/pactl/depcomp \
             src/pactl/GPL src/pactl/install-sh \
             src/pactl/LGPL src/pactl/LICENSE \
             src/pactl/m4 \
             src/pactl/Makefile.am src/pactl/Makefile.in \
             src/pactl/missing src/pactl/NEWS \
             src/pactl/README \
             src/pactl/src/core-error.h \
             src/pactl/src/core-util.h \
             src/pactl/src/i18n.h \
             src/pactl/src/install.sh \
             src/pactl/src/macro.h \
             src/pactl/src/Makefile.am \
             src/pactl/src/Makefile.in \
             src/pactl/src/pactl.c \
             src/pactl/src/socket.h \
             src/pactl/src/strbuf.h \
             src/pactl/src/strlist.h \
             src/pactl/todo

doc_DATA = README.adoc

check-gettext:
	@if test x$(USE_NLS) != "xyes" ; then \
	  echo "Missing gettext. Rerun configure and check for" \
	  "'checking whether to use NLS... yes'!" ; exit 1; fi

update-po: check-gettext
	@find $(srcdir)/src/ -name "*.cpp" -print | sort > $(srcdir)/po/POTFILES.in.2 ; \
	if diff $(srcdir)/po/POTFILES.in $(srcdir)/po/POTFILES.in.2 >/dev/null 2>&1 ; then \
	   rm -f $(srcdir)/po/POTFILES.in.2 ; \
	else \
	   mv $(srcdir)/po/POTFILES.in.2 $(srcdir)/po/POTFILES.in ; \
	fi
	cd po && $(MAKE) $(AM_MAKEFLAGS) update-po

update-gmo: check-gettext
	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo

force-update-gmo: check-gettext
	touch po/*.po
	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo

force-update-gmo-%: check-gettext
	@language=`echo $@ | sed s/force-update-gmo-//` ; \
	if test ! -f po/$$language.po ; then \
	   echo "file po/$$language.po does not exist" ; exit 1 \
	fi ; \
	touch po/$$language.po ; \
	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo
	
checkinstall:
	@echo
	@echo "checkinstall..."
	@echo
	make distdir
	cd $(PACKAGE)-$(VERSION)
	checkinstall -D --fstrans --pkgname "$(PACKAGE)" \
	--pkgversion $(VERSION) --pkggroup audio \
	--maintainer "Jos Lemmens \<jos\@jlemmens.nl\>" \
	--provides "daisy-player" \
	--strip --stripso \
	--review-control

.PHONY:
	hcheck-gettext update-po update-gmo force-update-gmo
