docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = ABOUT-NLS Changelog COMPILE COPYING daisy-player.description \
           daisy-player.desktop daisy-player.html daisy-player.menu \
           daisy-player.png daisy-player.txt License Makefile.am \
           Makefile.in TODO

dist_html_DATA = daisy-player.html
