install:
	cp ${srcdir}/af.mo ${prefix}/share/locale/af/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/de.mo ${prefix}/share/locale/de/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/es.mo ${prefix}/share/locale/es/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/fr.mo ${prefix}/share/locale/fr/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/hu.mo ${prefix}/share/locale/hu/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/nb.mo ${prefix}/share/locale/nb/LC_MESSAGES/daisy-player.mo
	cp ${srcdir}/nl.mo ${prefix}/share/locale/nl/LC_MESSAGES/daisy-player.mo
	update-language
	update-locale
